; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_tclass.c_so_throttle_best_effort.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_tclass.c_so_throttle_best_effort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.ifnet = type { i64 }

@net_io_policy_throttle_best_effort = common dso_local global i32 0, align 4
@TCP_BG_SWITCH_TIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, %struct.ifnet*)* @so_throttle_best_effort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @so_throttle_best_effort(%struct.socket* %0, %struct.ifnet* %1) #0 {
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.ifnet*, align 8
  %5 = alloca i64, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  store %struct.ifnet* %1, %struct.ifnet** %4, align 8
  %6 = call i64 (...) @net_uptime()
  store i64 %6, i64* %5, align 8
  %7 = load %struct.socket*, %struct.socket** %3, align 8
  %8 = call i64 @soissrcbesteffort(%struct.socket* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %27

10:                                               ; preds = %2
  %11 = load i32, i32* @net_io_policy_throttle_best_effort, align 4
  %12 = icmp eq i32 %11, 1
  br i1 %12, label %13, label %27

13:                                               ; preds = %10
  %14 = load %struct.ifnet*, %struct.ifnet** %4, align 8
  %15 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp sgt i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %13
  %19 = load i64, i64* %5, align 8
  %20 = load %struct.ifnet*, %struct.ifnet** %4, align 8
  %21 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = sub nsw i64 %19, %22
  %24 = trunc i64 %23 to i32
  %25 = load i32, i32* @TCP_BG_SWITCH_TIME, align 4
  %26 = icmp sle i32 %24, %25
  br label %27

27:                                               ; preds = %18, %13, %10, %2
  %28 = phi i1 [ false, %13 ], [ false, %10 ], [ false, %2 ], [ %26, %18 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i64 @net_uptime(...) #1

declare dso_local i64 @soissrcbesteffort(%struct.socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
